Added new Icons
+ nxp-lte
+ fa-grip-dots-vertical
↑ fa-spinner

--- a/demo.html
+++ b/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'nxp-icon';
-      src: url('./font/nxp-icon.eot?50426806');
-      src: url('./font/nxp-icon.eot?50426806#iefix') format('embedded-opentype'),
-           url('./font/nxp-icon.woff?50426806') format('woff'),
-           url('./font/nxp-icon.ttf?50426806') format('truetype'),
-           url('./font/nxp-icon.svg?50426806#nxp-icon') format('svg');
+      src: url('./font/nxp-icon.eot?66229478');
+      src: url('./font/nxp-icon.eot?66229478#iefix') format('embedded-opentype'),
+           url('./font/nxp-icon.woff?66229478') format('woff'),
+           url('./font/nxp-icon.ttf?66229478') format('truetype'),
+           url('./font/nxp-icon.svg?66229478#nxp-icon') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -1463,266 +1463,272 @@
         <div class="span3" title="Code: 0xe965">
           <i class="demo-icon icon-fa-check">&#xe965;</i> <span class="i-name">icon-fa-check</span><span class="i-code">0xe965</span>
         </div>
+        <div class="span3" title="Code: 0xe966">
+          <i class="demo-icon icon-fa-grip-dots-vertical">&#xe966;</i> <span class="i-name">icon-fa-grip-dots-vertical</span><span class="i-code">0xe966</span>
+        </div>
+        <div class="span3" title="Code: 0xe967">
+          <i class="demo-icon icon-nxp-lte">&#xe967;</i> <span class="i-name">icon-nxp-lte</span><span class="i-code">0xe967</span>
+        </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe968">
           <i class="demo-icon icon-nxp-smart-access">&#xe968;</i> <span class="i-name">icon-nxp-smart-access</span><span class="i-code">0xe968</span>
         </div>
         <div class="span3" title="Code: 0xe969">
           <i class="demo-icon icon-nxp-smart-card">&#xe969;</i> <span class="i-name">icon-nxp-smart-card</span><span class="i-code">0xe969</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe96a">
           <i class="demo-icon icon-nxp-smart-control">&#xe96a;</i> <span class="i-name">icon-nxp-smart-control</span><span class="i-code">0xe96a</span>
         </div>
         <div class="span3" title="Code: 0xe96b">
           <i class="demo-icon icon-nxp-smart-fridge">&#xe96b;</i> <span class="i-name">icon-nxp-smart-fridge</span><span class="i-code">0xe96b</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe96c">
           <i class="demo-icon icon-nxp-smart-lock">&#xe96c;</i> <span class="i-name">icon-nxp-smart-lock</span><span class="i-code">0xe96c</span>
         </div>
         <div class="span3" title="Code: 0xe96d">
           <i class="demo-icon icon-nxp-smartwatch-nfc">&#xe96d;</i> <span class="i-name">icon-nxp-smartwatch-nfc</span><span class="i-code">0xe96d</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe96e">
           <i class="demo-icon icon-nxp-smartwatch">&#xe96e;</i> <span class="i-name">icon-nxp-smartwatch</span><span class="i-code">0xe96e</span>
         </div>
         <div class="span3" title="Code: 0xe96f">
           <i class="demo-icon icon-nxp-software">&#xe96f;</i> <span class="i-name">icon-nxp-software</span><span class="i-code">0xe96f</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe970">
           <i class="demo-icon icon-nxp-solutions">&#xe970;</i> <span class="i-name">icon-nxp-solutions</span><span class="i-code">0xe970</span>
         </div>
         <div class="span3" title="Code: 0xe971">
           <i class="demo-icon icon-nxp-speedometer-high">&#xe971;</i> <span class="i-name">icon-nxp-speedometer-high</span><span class="i-code">0xe971</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe972">
           <i class="demo-icon icon-nxp-speedometer">&#xe972;</i> <span class="i-name">icon-nxp-speedometer</span><span class="i-code">0xe972</span>
         </div>
         <div class="span3" title="Code: 0xe973">
           <i class="demo-icon icon-nxp-statistics">&#xe973;</i> <span class="i-name">icon-nxp-statistics</span><span class="i-code">0xe973</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe974">
           <i class="demo-icon icon-nxp-steering">&#xe974;</i> <span class="i-name">icon-nxp-steering</span><span class="i-code">0xe974</span>
         </div>
         <div class="span3" title="Code: 0xe975">
           <i class="demo-icon icon-nxp-stocks">&#xe975;</i> <span class="i-name">icon-nxp-stocks</span><span class="i-code">0xe975</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe976">
           <i class="demo-icon icon-nxp-strongbox">&#xe976;</i> <span class="i-name">icon-nxp-strongbox</span><span class="i-code">0xe976</span>
         </div>
         <div class="span3" title="Code: 0xe977">
           <i class="demo-icon icon-nxp-sunblind">&#xe977;</i> <span class="i-name">icon-nxp-sunblind</span><span class="i-code">0xe977</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe978">
           <i class="demo-icon icon-nxp-support-request">&#xe978;</i> <span class="i-name">icon-nxp-support-request</span><span class="i-code">0xe978</span>
         </div>
         <div class="span3" title="Code: 0xe979">
           <i class="demo-icon icon-nxp-support">&#xe979;</i> <span class="i-name">icon-nxp-support</span><span class="i-code">0xe979</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe97a">
           <i class="demo-icon icon-nxp-surveillance">&#xe97a;</i> <span class="i-name">icon-nxp-surveillance</span><span class="i-code">0xe97a</span>
         </div>
         <div class="span3" title="Code: 0xe97b">
           <i class="demo-icon icon-nxp-tabletop-contact-sensor-closed">&#xe97b;</i> <span class="i-name">icon-nxp-tabletop-contact-sensor-closed</span><span class="i-code">0xe97b</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe97c">
           <i class="demo-icon icon-nxp-tabletop-contact-sensor-open">&#xe97c;</i> <span class="i-name">icon-nxp-tabletop-contact-sensor-open</span><span class="i-code">0xe97c</span>
         </div>
         <div class="span3" title="Code: 0xe97d">
           <i class="demo-icon icon-nxp-tabletop-fan">&#xe97d;</i> <span class="i-name">icon-nxp-tabletop-fan</span><span class="i-code">0xe97d</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe97e">
           <i class="demo-icon icon-nxp-tabletop-light-off">&#xe97e;</i> <span class="i-name">icon-nxp-tabletop-light-off</span><span class="i-code">0xe97e</span>
         </div>
         <div class="span3" title="Code: 0xe97f">
           <i class="demo-icon icon-nxp-tabletop-light-on">&#xe97f;</i> <span class="i-name">icon-nxp-tabletop-light-on</span><span class="i-code">0xe97f</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe981">
           <i class="demo-icon icon-nxp-tabletop-smart-lock-switch-off">&#xe981;</i> <span class="i-name">icon-nxp-tabletop-smart-lock-switch-off</span><span class="i-code">0xe981</span>
         </div>
         <div class="span3" title="Code: 0xe982">
           <i class="demo-icon icon-nxp-tabletop-smart-lock-switch-on">&#xe982;</i> <span class="i-name">icon-nxp-tabletop-smart-lock-switch-on</span><span class="i-code">0xe982</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe984">
           <i class="demo-icon icon-nxp-technology">&#xe984;</i> <span class="i-name">icon-nxp-technology</span><span class="i-code">0xe984</span>
         </div>
         <div class="span3" title="Code: 0xe985">
           <i class="demo-icon icon-nxp-thermostat">&#xe985;</i> <span class="i-name">icon-nxp-thermostat</span><span class="i-code">0xe985</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe986">
           <i class="demo-icon icon-nxp-ticketing">&#xe986;</i> <span class="i-name">icon-nxp-ticketing</span><span class="i-code">0xe986</span>
         </div>
         <div class="span3" title="Code: 0xe987">
           <i class="demo-icon icon-nxp-time">&#xe987;</i> <span class="i-name">icon-nxp-time</span><span class="i-code">0xe987</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe988">
           <i class="demo-icon icon-nxp-tire-alternate">&#xe988;</i> <span class="i-name">icon-nxp-tire-alternate</span><span class="i-code">0xe988</span>
         </div>
         <div class="span3" title="Code: 0xe989">
           <i class="demo-icon icon-nxp-tire">&#xe989;</i> <span class="i-name">icon-nxp-tire</span><span class="i-code">0xe989</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe98a">
           <i class="demo-icon icon-nxp-tracker">&#xe98a;</i> <span class="i-name">icon-nxp-tracker</span><span class="i-code">0xe98a</span>
         </div>
         <div class="span3" title="Code: 0xe98b">
           <i class="demo-icon icon-nxp-trade">&#xe98b;</i> <span class="i-name">icon-nxp-trade</span><span class="i-code">0xe98b</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe98c">
           <i class="demo-icon icon-nxp-trailer">&#xe98c;</i> <span class="i-name">icon-nxp-trailer</span><span class="i-code">0xe98c</span>
         </div>
         <div class="span3" title="Code: 0xe98d">
           <i class="demo-icon icon-nxp-training">&#xe98d;</i> <span class="i-name">icon-nxp-training</span><span class="i-code">0xe98d</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe98e">
           <i class="demo-icon icon-nxp-transfer">&#xe98e;</i> <span class="i-name">icon-nxp-transfer</span><span class="i-code">0xe98e</span>
         </div>
         <div class="span3" title="Code: 0xe98f">
           <i class="demo-icon icon-nxp-transformer">&#xe98f;</i> <span class="i-name">icon-nxp-transformer</span><span class="i-code">0xe98f</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe990">
           <i class="demo-icon icon-nxp-transmission">&#xe990;</i> <span class="i-name">icon-nxp-transmission</span><span class="i-code">0xe990</span>
         </div>
         <div class="span3" title="Code: 0xe991">
           <i class="demo-icon icon-nxp-transmitter">&#xe991;</i> <span class="i-name">icon-nxp-transmitter</span><span class="i-code">0xe991</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe992">
           <i class="demo-icon icon-nxp-transponder">&#xe992;</i> <span class="i-name">icon-nxp-transponder</span><span class="i-code">0xe992</span>
         </div>
         <div class="span3" title="Code: 0xe993">
           <i class="demo-icon icon-nxp-trolley">&#xe993;</i> <span class="i-name">icon-nxp-trolley</span><span class="i-code">0xe993</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe994">
           <i class="demo-icon icon-nxp-tsn">&#xe994;</i> <span class="i-name">icon-nxp-tsn</span><span class="i-code">0xe994</span>
         </div>
         <div class="span3" title="Code: 0xe995">
           <i class="demo-icon icon-nxp-ultrasonic">&#xe995;</i> <span class="i-name">icon-nxp-ultrasonic</span><span class="i-code">0xe995</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe996">
           <i class="demo-icon icon-nxp-university-recruiting-1">&#xe996;</i> <span class="i-name">icon-nxp-university-recruiting-1</span><span class="i-code">0xe996</span>
         </div>
         <div class="span3" title="Code: 0xe997">
           <i class="demo-icon icon-nxp-university-recruiting-2">&#xe997;</i> <span class="i-name">icon-nxp-university-recruiting-2</span><span class="i-code">0xe997</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe998">
           <i class="demo-icon icon-nxp-university-recruiting-3">&#xe998;</i> <span class="i-name">icon-nxp-university-recruiting-3</span><span class="i-code">0xe998</span>
         </div>
         <div class="span3" title="Code: 0xe999">
           <i class="demo-icon icon-nxp-university-recruiting-4">&#xe999;</i> <span class="i-name">icon-nxp-university-recruiting-4</span><span class="i-code">0xe999</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe99a">
           <i class="demo-icon icon-nxp-university-recruiting-5">&#xe99a;</i> <span class="i-name">icon-nxp-university-recruiting-5</span><span class="i-code">0xe99a</span>
         </div>
         <div class="span3" title="Code: 0xe99b">
           <i class="demo-icon icon-nxp-university-recruiting-6">&#xe99b;</i> <span class="i-name">icon-nxp-university-recruiting-6</span><span class="i-code">0xe99b</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe99c">
           <i class="demo-icon icon-nxp-upload">&#xe99c;</i> <span class="i-name">icon-nxp-upload</span><span class="i-code">0xe99c</span>
         </div>
         <div class="span3" title="Code: 0xe99d">
           <i class="demo-icon icon-nxp-usb">&#xe99d;</i> <span class="i-name">icon-nxp-usb</span><span class="i-code">0xe99d</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe99e">
           <i class="demo-icon icon-nxp-user-authentication">&#xe99e;</i> <span class="i-name">icon-nxp-user-authentication</span><span class="i-code">0xe99e</span>
         </div>
         <div class="span3" title="Code: 0xe99f">
           <i class="demo-icon icon-nxp-uwb">&#xe99f;</i> <span class="i-name">icon-nxp-uwb</span><span class="i-code">0xe99f</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe9a0">
           <i class="demo-icon icon-nxp-vehicle-networking">&#xe9a0;</i> <span class="i-name">icon-nxp-vehicle-networking</span><span class="i-code">0xe9a0</span>
         </div>
         <div class="span3" title="Code: 0xe9a1">
           <i class="demo-icon icon-nxp-verification">&#xe9a1;</i> <span class="i-name">icon-nxp-verification</span><span class="i-code">0xe9a1</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe9a2">
           <i class="demo-icon icon-nxp-vertical-automotive">&#xe9a2;</i> <span class="i-name">icon-nxp-vertical-automotive</span><span class="i-code">0xe9a2</span>
         </div>
         <div class="span3" title="Code: 0xe9a3">
           <i class="demo-icon icon-nxp-vertical-comms-infrastructure">&#xe9a3;</i> <span class="i-name">icon-nxp-vertical-comms-infrastructure</span><span class="i-code">0xe9a3</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe9a4">
           <i class="demo-icon icon-nxp-vertical-industrial">&#xe9a4;</i> <span class="i-name">icon-nxp-vertical-industrial</span><span class="i-code">0xe9a4</span>
         </div>
         <div class="span3" title="Code: 0xe9a5">
           <i class="demo-icon icon-nxp-vertical-mobile">&#xe9a5;</i> <span class="i-name">icon-nxp-vertical-mobile</span><span class="i-code">0xe9a5</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe9a6">
           <i class="demo-icon icon-nxp-vertical-smart-city">&#xe9a6;</i> <span class="i-name">icon-nxp-vertical-smart-city</span><span class="i-code">0xe9a6</span>
         </div>
         <div class="span3" title="Code: 0xe9a7">
           <i class="demo-icon icon-nxp-vertical-smart-home">&#xe9a7;</i> <span class="i-name">icon-nxp-vertical-smart-home</span><span class="i-code">0xe9a7</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe9a8">
           <i class="demo-icon icon-nxp-voice-control">&#xe9a8;</i> <span class="i-name">icon-nxp-voice-control</span><span class="i-code">0xe9a8</span>
         </div>
         <div class="span3" title="Code: 0xe9a9">
           <i class="demo-icon icon-nxp-voice-enabled">&#xe9a9;</i> <span class="i-name">icon-nxp-voice-enabled</span><span class="i-code">0xe9a9</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe9aa">
           <i class="demo-icon icon-nxp-voltage">&#xe9aa;</i> <span class="i-name">icon-nxp-voltage</span><span class="i-code">0xe9aa</span>
         </div>
         <div class="span3" title="Code: 0xe9ab">
           <i class="demo-icon icon-nxp-voltmeter">&#xe9ab;</i> <span class="i-name">icon-nxp-voltmeter</span><span class="i-code">0xe9ab</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe9ac">
           <i class="demo-icon icon-nxp-volume-off">&#xe9ac;</i> <span class="i-name">icon-nxp-volume-off</span><span class="i-code">0xe9ac</span>
         </div>
         <div class="span3" title="Code: 0xe9ad">
           <i class="demo-icon icon-nxp-volume-on-off">&#xe9ad;</i> <span class="i-name">icon-nxp-volume-on-off</span><span class="i-code">0xe9ad</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe9ae">
           <i class="demo-icon icon-nxp-vr">&#xe9ae;</i> <span class="i-name">icon-nxp-vr</span><span class="i-code">0xe9ae</span>
         </div>
         <div class="span3" title="Code: 0xe9af">
           <i class="demo-icon icon-nxp-washing-machine">&#xe9af;</i> <span class="i-name">icon-nxp-washing-machine</span><span class="i-code">0xe9af</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe9b0">
           <i class="demo-icon icon-nxp-wearables">&#xe9b0;</i> <span class="i-name">icon-nxp-wearables</span><span class="i-code">0xe9b0</span>
         </div>
         <div class="span3" title="Code: 0xe9b1">
           <i class="demo-icon icon-nxp-wireless-charger">&#xe9b1;</i> <span class="i-name">icon-nxp-wireless-charger</span><span class="i-code">0xe9b1</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe9b2">
           <i class="demo-icon icon-nxp-wireless">&#xe9b2;</i> <span class="i-name">icon-nxp-wireless</span><span class="i-code">0xe9b2</span>
         </div>
         <div class="span3" title="Code: 0xe9b3">
           <i class="demo-icon icon-nxp-worldwide-location">&#xe9b3;</i> <span class="i-name">icon-nxp-worldwide-location</span><span class="i-code">0xe9b3</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe9b4">
           <i class="demo-icon icon-nxp-tabletop-smart-lock-unlocked">&#xe9b4;</i> <span class="i-name">icon-nxp-tabletop-smart-lock-unlocked</span><span class="i-code">0xe9b4</span>
         </div>
