--- a/demo.html
+++ b/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'nxp-icon';
-      src: url('./font/nxp-icon.eot?66229478');
-      src: url('./font/nxp-icon.eot?66229478#iefix') format('embedded-opentype'),
-           url('./font/nxp-icon.woff?66229478') format('woff'),
-           url('./font/nxp-icon.ttf?66229478') format('truetype'),
-           url('./font/nxp-icon.svg?66229478#nxp-icon') format('svg');
+      src: url('./font/nxp-icon.eot?39444836');
+      src: url('./font/nxp-icon.eot?39444836#iefix') format('embedded-opentype'),
+           url('./font/nxp-icon.woff?39444836') format('woff'),
+           url('./font/nxp-icon.ttf?39444836') format('truetype'),
+           url('./font/nxp-icon.svg?39444836#nxp-icon') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -1555,6 +1555,9 @@
         </div>
       </div>
       <div class="row">
+        <div class="span3" title="Code: 0xe980">
+          <i class="demo-icon icon-fa-tank-water">&#xe980;</i> <span class="i-name">icon-fa-tank-water</span><span class="i-code">0xe980</span>
+        </div>
         <div class="span3" title="Code: 0xe981">
           <i class="demo-icon icon-nxp-tabletop-smart-lock-switch-off">&#xe981;</i> <span class="i-name">icon-nxp-tabletop-smart-lock-switch-off</span><span class="i-code">0xe981</span>
         </div>
@@ -1564,11 +1567,11 @@
         <div class="span3" title="Code: 0xe984">
           <i class="demo-icon icon-nxp-technology">&#xe984;</i> <span class="i-name">icon-nxp-technology</span><span class="i-code">0xe984</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe985">
           <i class="demo-icon icon-nxp-thermostat">&#xe985;</i> <span class="i-name">icon-nxp-thermostat</span><span class="i-code">0xe985</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe986">
           <i class="demo-icon icon-nxp-ticketing">&#xe986;</i> <span class="i-name">icon-nxp-ticketing</span><span class="i-code">0xe986</span>
         </div>
@@ -1578,11 +1581,11 @@
         <div class="span3" title="Code: 0xe988">
           <i class="demo-icon icon-nxp-tire-alternate">&#xe988;</i> <span class="i-name">icon-nxp-tire-alternate</span><span class="i-code">0xe988</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe989">
           <i class="demo-icon icon-nxp-tire">&#xe989;</i> <span class="i-name">icon-nxp-tire</span><span class="i-code">0xe989</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe98a">
           <i class="demo-icon icon-nxp-tracker">&#xe98a;</i> <span class="i-name">icon-nxp-tracker</span><span class="i-code">0xe98a</span>
         </div>
@@ -1592,11 +1595,11 @@
         <div class="span3" title="Code: 0xe98c">
           <i class="demo-icon icon-nxp-trailer">&#xe98c;</i> <span class="i-name">icon-nxp-trailer</span><span class="i-code">0xe98c</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe98d">
           <i class="demo-icon icon-nxp-training">&#xe98d;</i> <span class="i-name">icon-nxp-training</span><span class="i-code">0xe98d</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe98e">
           <i class="demo-icon icon-nxp-transfer">&#xe98e;</i> <span class="i-name">icon-nxp-transfer</span><span class="i-code">0xe98e</span>
         </div>
@@ -1606,11 +1609,11 @@
         <div class="span3" title="Code: 0xe990">
           <i class="demo-icon icon-nxp-transmission">&#xe990;</i> <span class="i-name">icon-nxp-transmission</span><span class="i-code">0xe990</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe991">
           <i class="demo-icon icon-nxp-transmitter">&#xe991;</i> <span class="i-name">icon-nxp-transmitter</span><span class="i-code">0xe991</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe992">
           <i class="demo-icon icon-nxp-transponder">&#xe992;</i> <span class="i-name">icon-nxp-transponder</span><span class="i-code">0xe992</span>
         </div>
@@ -1620,11 +1623,11 @@
         <div class="span3" title="Code: 0xe994">
           <i class="demo-icon icon-nxp-tsn">&#xe994;</i> <span class="i-name">icon-nxp-tsn</span><span class="i-code">0xe994</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe995">
           <i class="demo-icon icon-nxp-ultrasonic">&#xe995;</i> <span class="i-name">icon-nxp-ultrasonic</span><span class="i-code">0xe995</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe996">
           <i class="demo-icon icon-nxp-university-recruiting-1">&#xe996;</i> <span class="i-name">icon-nxp-university-recruiting-1</span><span class="i-code">0xe996</span>
         </div>
@@ -1634,11 +1637,11 @@
         <div class="span3" title="Code: 0xe998">
           <i class="demo-icon icon-nxp-university-recruiting-3">&#xe998;</i> <span class="i-name">icon-nxp-university-recruiting-3</span><span class="i-code">0xe998</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe999">
           <i class="demo-icon icon-nxp-university-recruiting-4">&#xe999;</i> <span class="i-name">icon-nxp-university-recruiting-4</span><span class="i-code">0xe999</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe99a">
           <i class="demo-icon icon-nxp-university-recruiting-5">&#xe99a;</i> <span class="i-name">icon-nxp-university-recruiting-5</span><span class="i-code">0xe99a</span>
         </div>
@@ -1648,11 +1651,11 @@
         <div class="span3" title="Code: 0xe99c">
           <i class="demo-icon icon-nxp-upload">&#xe99c;</i> <span class="i-name">icon-nxp-upload</span><span class="i-code">0xe99c</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe99d">
           <i class="demo-icon icon-nxp-usb">&#xe99d;</i> <span class="i-name">icon-nxp-usb</span><span class="i-code">0xe99d</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe99e">
           <i class="demo-icon icon-nxp-user-authentication">&#xe99e;</i> <span class="i-name">icon-nxp-user-authentication</span><span class="i-code">0xe99e</span>
         </div>
@@ -1662,11 +1665,11 @@
         <div class="span3" title="Code: 0xe9a0">
           <i class="demo-icon icon-nxp-vehicle-networking">&#xe9a0;</i> <span class="i-name">icon-nxp-vehicle-networking</span><span class="i-code">0xe9a0</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe9a1">
           <i class="demo-icon icon-nxp-verification">&#xe9a1;</i> <span class="i-name">icon-nxp-verification</span><span class="i-code">0xe9a1</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe9a2">
           <i class="demo-icon icon-nxp-vertical-automotive">&#xe9a2;</i> <span class="i-name">icon-nxp-vertical-automotive</span><span class="i-code">0xe9a2</span>
         </div>
@@ -1676,11 +1679,11 @@
         <div class="span3" title="Code: 0xe9a4">
           <i class="demo-icon icon-nxp-vertical-industrial">&#xe9a4;</i> <span class="i-name">icon-nxp-vertical-industrial</span><span class="i-code">0xe9a4</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe9a5">
           <i class="demo-icon icon-nxp-vertical-mobile">&#xe9a5;</i> <span class="i-name">icon-nxp-vertical-mobile</span><span class="i-code">0xe9a5</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe9a6">
           <i class="demo-icon icon-nxp-vertical-smart-city">&#xe9a6;</i> <span class="i-name">icon-nxp-vertical-smart-city</span><span class="i-code">0xe9a6</span>
         </div>
@@ -1690,11 +1693,11 @@
         <div class="span3" title="Code: 0xe9a8">
           <i class="demo-icon icon-nxp-voice-control">&#xe9a8;</i> <span class="i-name">icon-nxp-voice-control</span><span class="i-code">0xe9a8</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe9a9">
           <i class="demo-icon icon-nxp-voice-enabled">&#xe9a9;</i> <span class="i-name">icon-nxp-voice-enabled</span><span class="i-code">0xe9a9</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe9aa">
           <i class="demo-icon icon-nxp-voltage">&#xe9aa;</i> <span class="i-name">icon-nxp-voltage</span><span class="i-code">0xe9aa</span>
         </div>
@@ -1704,11 +1707,11 @@
         <div class="span3" title="Code: 0xe9ac">
           <i class="demo-icon icon-nxp-volume-off">&#xe9ac;</i> <span class="i-name">icon-nxp-volume-off</span><span class="i-code">0xe9ac</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe9ad">
           <i class="demo-icon icon-nxp-volume-on-off">&#xe9ad;</i> <span class="i-name">icon-nxp-volume-on-off</span><span class="i-code">0xe9ad</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe9ae">
           <i class="demo-icon icon-nxp-vr">&#xe9ae;</i> <span class="i-name">icon-nxp-vr</span><span class="i-code">0xe9ae</span>
         </div>
@@ -1718,11 +1721,11 @@
         <div class="span3" title="Code: 0xe9b0">
           <i class="demo-icon icon-nxp-wearables">&#xe9b0;</i> <span class="i-name">icon-nxp-wearables</span><span class="i-code">0xe9b0</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe9b1">
           <i class="demo-icon icon-nxp-wireless-charger">&#xe9b1;</i> <span class="i-name">icon-nxp-wireless-charger</span><span class="i-code">0xe9b1</span>
         </div>
-      </div>
-      <div class="row">
         <div class="span3" title="Code: 0xe9b2">
           <i class="demo-icon icon-nxp-wireless">&#xe9b2;</i> <span class="i-name">icon-nxp-wireless</span><span class="i-code">0xe9b2</span>
         </div>
@@ -1732,6 +1735,8 @@
         <div class="span3" title="Code: 0xe9b4">
           <i class="demo-icon icon-nxp-tabletop-smart-lock-unlocked">&#xe9b4;</i> <span class="i-name">icon-nxp-tabletop-smart-lock-unlocked</span><span class="i-code">0xe9b4</span>
         </div>
+      </div>
+      <div class="row">
         <div class="span3" title="Code: 0xe9b5">
           <i class="demo-icon icon-nxp-tabletop-smart-lock-locked">&#xe9b5;</i> <span class="i-name">icon-nxp-tabletop-smart-lock-locked</span><span class="i-code">0xe9b5</span>
         </div>
