Added nxp-ac, nxp-dc

--- a/demo.html
+++ b/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'nxp-icon';
-      src: url('./font/nxp-icon.eot?71641830');
-      src: url('./font/nxp-icon.eot?71641830#iefix') format('embedded-opentype'),
-           url('./font/nxp-icon.woff?71641830') format('woff'),
-           url('./font/nxp-icon.ttf?71641830') format('truetype'),
-           url('./font/nxp-icon.svg?71641830#nxp-icon') format('svg');
+      src: url('./font/nxp-icon.eot?46903847');
+      src: url('./font/nxp-icon.eot?46903847#iefix') format('embedded-opentype'),
+           url('./font/nxp-icon.woff?46903847') format('woff'),
+           url('./font/nxp-icon.ttf?46903847') format('truetype'),
+           url('./font/nxp-icon.svg?46903847#nxp-icon') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -1809,6 +1809,12 @@
       <div class="row">
         <div class="span3" title="Code: 0xe9c8">
           <i class="demo-icon icon-fa-circle-xmark-ui">&#xe9c8;</i> <span class="i-name">icon-fa-circle-xmark-ui</span><span class="i-code">0xe9c8</span>
+        </div>
+        <div class="span3" title="Code: 0xe9c9">
+          <i class="demo-icon icon-nxp-ac">&#xe9c9;</i> <span class="i-name">icon-nxp-ac</span><span class="i-code">0xe9c9</span>
+        </div>
+        <div class="span3" title="Code: 0xe9ca">
+          <i class="demo-icon icon-nxp-dc">&#xe9ca;</i> <span class="i-name">icon-nxp-dc</span><span class="i-code">0xe9ca</span>
         </div>
       </div>
     </div>
