--- a/demo.html
+++ b/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'nxp-icon';
-      src: url('./font/nxp-icon.eot?46903847');
-      src: url('./font/nxp-icon.eot?46903847#iefix') format('embedded-opentype'),
-           url('./font/nxp-icon.woff?46903847') format('woff'),
-           url('./font/nxp-icon.ttf?46903847') format('truetype'),
-           url('./font/nxp-icon.svg?46903847#nxp-icon') format('svg');
+      src: url('./font/nxp-icon.eot?74139942');
+      src: url('./font/nxp-icon.eot?74139942#iefix') format('embedded-opentype'),
+           url('./font/nxp-icon.woff?74139942') format('woff'),
+           url('./font/nxp-icon.ttf?74139942') format('truetype'),
+           url('./font/nxp-icon.svg?74139942#nxp-icon') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -1815,6 +1815,9 @@
         </div>
         <div class="span3" title="Code: 0xe9ca">
           <i class="demo-icon icon-nxp-dc">&#xe9ca;</i> <span class="i-name">icon-nxp-dc</span><span class="i-code">0xe9ca</span>
+        </div>
+        <div class="span3" title="Code: 0xe9cb">
+          <i class="demo-icon icon-nxp-matter">&#xe9cb;</i> <span class="i-name">icon-nxp-matter</span><span class="i-code">0xe9cb</span>
         </div>
       </div>
     </div>
