--- a/demo.html
+++ b/demo.html
@@ -146,11 +146,11 @@
     }
     @font-face {
       font-family: 'nxp-icon';
-      src: url('./font/nxp-icon.eot?74139942');
-      src: url('./font/nxp-icon.eot?74139942#iefix') format('embedded-opentype'),
-           url('./font/nxp-icon.woff?74139942') format('woff'),
-           url('./font/nxp-icon.ttf?74139942') format('truetype'),
-           url('./font/nxp-icon.svg?74139942#nxp-icon') format('svg');
+      src: url('./font/nxp-icon.eot?47261043');
+      src: url('./font/nxp-icon.eot?47261043#iefix') format('embedded-opentype'),
+           url('./font/nxp-icon.woff?47261043') format('woff'),
+           url('./font/nxp-icon.ttf?47261043') format('truetype'),
+           url('./font/nxp-icon.svg?47261043#nxp-icon') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -1818,6 +1818,14 @@
         </div>
         <div class="span3" title="Code: 0xe9cb">
           <i class="demo-icon nxp-matter">&#xe9cb;</i> <span class="i-name">nxp-matter</span><span class="i-code">0xe9cb</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3" title="Code: 0xe9cc">
+          <i class="demo-icon fa-moped">&#xe9cc;</i> <span class="i-name">fa-moped</span><span class="i-code">0xe9cc</span>
+        </div>
+        <div class="span3" title="Code: 0xe9cd">
+          <i class="demo-icon nxp-sustainability">&#xe9cd;</i> <span class="i-name">nxp-sustainability</span><span class="i-code">0xe9cd</span>
         </div>
       </div>
     </div>
